publish-to-pypi-stale: use appropriate API token.

--- a/.github/workflows/publish-to-pypi-stale.yml
+++ b/.github/workflows/publish-to-pypi-stale.yml
@@ -27,4 +27,4 @@ jobs:
           twine upload dist/*
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN_STALE_MACCARONE }}
