--- a/.github/workflows/publish-to-pypi-stale.yml
+++ b/.github/workflows/publish-to-pypi-stale.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           pip install build
           python -m build
+        env:
+          SETUPTOOLS_SCM_PRETEND_VERSION: ${{ github.ref_name }}
       - name: Publish package
         run: |
           pip install twine
