--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install --upgrade pip
+      - name: Preprocess with stale_maccarone
+        run: |
+          pip install stale_maccarone
+          maccarone src/maccarone
+          pip uninstall stale_maccarone
       - name: Build package
         run: |
           pip install build
