--- a/.github/workflows/publish-to-pypi-stale.yml
+++ b/.github/workflows/publish-to-pypi-stale.yml
@@ -19,6 +19,8 @@ jobs:
           pip install stale_maccarone
           python -m stale_maccarone.scripts.preprocess src/maccarone
           pip uninstall stale_maccarone
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - name: Rename to `stale_maccarone`
         run: |
           support/rename_to_stale.sh
