workflows/publish-*: use `uninstall -y`.
... so that the job doesn't fail when pip prompts for confirmation.

--- a/.github/workflows/publish-to-pypi-stale.yml
+++ b/.github/workflows/publish-to-pypi-stale.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           pip install stale_maccarone
           python -m stale_maccarone.scripts.preprocess src/maccarone
-          pip uninstall stale_maccarone
+          pip uninstall -y stale_maccarone
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - name: Rename to `stale_maccarone`
