--- a/.github/workflows/publish-to-pypi-stale.yml
+++ b/.github/workflows/publish-to-pypi-stale.yml
@@ -16,9 +16,8 @@ jobs:
       - run: python -m pip install --upgrade pip
       - name: Preprocess with stale_maccarone
         run: |
-          pip install stale_maccarone
-          python -m stale_maccarone.scripts.preprocess src/maccarone
-          pip uninstall -y stale_maccarone
+          pip install -e .[dev]
+          stale_maccarone src/maccarone
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - name: Rename to `stale_maccarone`
