--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -12,16 +12,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install --upgrade pip
-      - name: Preprocess with stale_maccarone
-        run: |
-          pip install stale_maccarone
-          stale_maccarone src/maccarone
-          pip uninstall -y stale_maccarone
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - name: Install package
         run: |
-          pip install .
+          pip install .[dev]
+      - name: Preprocess with stale_maccarone
+        run: |
+          stale_maccarone src/maccarone
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       - name: Run pytest
         run: |
           pytest
